# dna-labeling-benchmark

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: conf.py  design_rationale.md  index.md  metrics.md
docs/api/: evaluate_predictors.rst  global_metrics.rst  index.md  label_definition.rst  pipeline.rst  plotting.rst  public.rst  transcript_mapping.rst
docs/getting_started/: array_benchmark.md  gff_benchmark.md  index.md  method_comparison.md  wandb_logging.md
docs/metrics/: boundary_exactness.md  diagnostic_depth.md  indel.md  index.md  nucleotide_classification.md  overview.md  region_discovery.md  structural_coherence.md  transitions.md
examples/: array_benchmark_example.ipynb  gtf_programmatic_example.ipynb  wandb_training_loop.ipynb
scripts/: generate_readme_plots.py
src/dna_segmentation_benchmark/: __init__.py  cli.py  evaluate_predictors.py  io_utils.py  label_definition.py  pipeline.py  summary_stat_plotting.py  transcript_mapping.py  wandb_logger.py
src/dna_segmentation_benchmark/eval/: boundary_precision.py  chain_comparison.py  evaluate_predictors.py  frame_shift.py  global_metrics.py  intersection_over_union.py  junction_errors.py  state_transitions.py  structural_summary.py  structure.py  transcript_classification.py  uitls.py  utils.py
src/dna_segmentation_benchmark/plotting/: config.py  single_pred_plotting.py  summary_stat_plotting.py  utils.py
src/dna_segmentation_benchmark/plotting/metrics/: __init__.py  boundary.py  diagnostic.py  frameshift.py  indel.py  iou.py  ml.py  structural.py  transitions.py
tests/: benchmark_test_cases.py  test_benchmark.py  test_chain_metrics.py  test_io_utils.py  test_transcript_mapping.py
