[project]
name = "dna-segmentation-benchmark"
version = "0.1.1"
description = "Metrics for nucleotide-level DNA segmentation benchmarking"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Benjamin Kroeger" },
]
keywords = ["genomics", "gene prediction", "benchmarking", "segmentation", "bioinformatics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: OS Independent",
]
dependencies = [
    "bokeh>=3.7.0",
    "click>=8.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pydantic>=2.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "pyyaml>=6.0.0",
    "pyranges1>=1.3.5",
    "scipy>=1.10",
]

[project.optional-dependencies]
wandb = ["wandb[media]>=0.26"]
docs = [
    "myst-parser>=4.0",
    "sphinx>=8.0",
    "sphinx-autodoc-typehints>=3.0",
    "sphinx-rtd-theme>=3.0",
]

[dependency-groups]
dev = [
    "fastparquet>=2025.12.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "notebook>=7.4.2",
    "pyarrow>=23.0.1",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["dna_segmentation_benchmark.wandb*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"dna_segmentation_benchmark" = ["icons/*.png"]

[tool.ruff]
line-length = 120

[project.scripts]
dna-benchmark = "dna_segmentation_benchmark.cli:cli"

[project.urls]
"Source Code" = "https://github.com/PredictProtein/benchmark"
"Bug Tracker" = "https://github.com/PredictProtein/benchmark/issues"
